<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright [2021] [Phuong Nguyen]-->

<!--    Licensed under the Apache License, Version 2.0 (the "License");-->
<!--    you may not use this file except in compliance with the License.-->
<!--    You may obtain a copy of the License at-->

<!--    http://www.apache.org/licenses/LICENSE-2.0-->

<!--    Unless required by applicable law or agreed to in writing, software-->
<!--    distributed under the License is distributed on an "AS IS" BASIS,-->
<!--    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--    See the License for the specific language governing permissions and-->
<!--    limitations under the License.-->

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/med_name_editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="40"
        android:minHeight="48dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/dose_amount_editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/med_name_editText"
        app:layout_constraintStart_toStartOf="@+id/med_name_editText"
        app:layout_constraintTop_toBottomOf="@+id/med_name_editText"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/daily_freq_editText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/dose_amount_editText"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/date_editText"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="false"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/daily_freq_editText"
        app:layout_constraintStart_toStartOf="@+id/daily_freq_editText"
        app:layout_constraintTop_toBottomOf="@+id/daily_freq_editText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Medicine_name"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/med_name_editText"
        app:layout_constraintEnd_toStartOf="@+id/med_name_editText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dose_amount"
        app:layout_constraintBaseline_toBaselineOf="@+id/dose_amount_editText"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/Dose_unit"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Daily_freq"
        app:layout_constraintBaseline_toBaselineOf="@+id/daily_freq_editText"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date_started"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_editText"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/dose_amount_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dose_amount_editText"
        app:layout_constraintTop_toBottomOf="@+id/dose_amount_editText"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>